--- a/web/characterSheet/CharacterListPage.xhtml
+++ b/web/characterSheet/CharacterListPage.xhtml
@@ -17,7 +17,7 @@
                         <h:panelGrid columns="2">
                             <h:outputLabel value="キャンペーン"/>
                             <h:selectOneMenu id="dropdown1" onchange="submit()" style="width: 240px" value="#{characterSheetController.characterListSelectedCampaign}" >
-                                <f:selectItems id="dropdown1SelectItems" value="#{applicationBean.campaignArray}"/>
+                                <f:selectItems id="dropdown1SelectItems" value="#{applicationController.campaignArray}"/>
                             </h:selectOneMenu>
                         </h:panelGrid>                            
                         <h:panelGrid style="width: 100%; text-align: right">
