Mod: Changed from button to Link

--- a/web/characterSheet/EditCharacterPerLevelPage.xhtml
+++ b/web/characterSheet/EditCharacterPerLevelPage.xhtml
@@ -21,7 +21,7 @@
                                         <h:commandButton action="#{characterSheetPerLevelController.saveButton_action}" id="saveButton1" value="保存"/>
                                     </h:panelGrid>
                                     <h:panelGrid id="gridPanel4" style="height: 100%; text-align: right; width: 100%">
-                                        <h:commandButton action="#{characterSheetPerLevelController.returnCharacterRecordPageButton_action()}"
+                                        <h:commandLink action="#{characterSheetPerLevelController.returnCharacterRecordPageButton_action()}"
                                                          id="returnCharacterRecordPageButton1" value="キャラクター修正画面へ戻る"/>
                                     </h:panelGrid>
                                 </h:panelGrid>
