Fix: correct method name for save within characteredit page.(formely, it was wrong name assigined)

--- a/web/characterSheet/EditCharacterRecordPage.xhtml
+++ b/web/characterSheet/EditCharacterRecordPage.xhtml
@@ -16,7 +16,7 @@
                 <h:panelGrid columns="1" id="contentsGrid" style="width: 100%">
                     <h:panelGrid columns="4" id="charaIdGridPanel1" style="height: 100%; text-align: left; width: 100%">
                         <h:panelGrid id="gridPanel14" style="width: 100%; height: 100%;">
-                            <h:commandButton action="#{characterSheetController.editCharaSaveButton_action}" id="saveButton1" value="保存"/>
+                            <h:commandButton action="#{characterSheetController.saveButton_action}" id="saveButton1" value="保存"/>
                         </h:panelGrid>
                         <h:panelGrid id="gridPanel15" style="width: 100%; height: 100%;">
                             <h:commandLink action="#{characterSheetController.viewLink_action}" style="font-size: 12px" id="viewLink" target="blank" value="印刷用画面へ"/>
