--- a/web/encounterRecord/Edit.xhtml
+++ b/web/encounterRecord/Edit.xhtml
@@ -33,7 +33,7 @@
                 <br />
                 <h:commandLink action="#{encounterRecordController.prepareList}" value="シナリオ『#{scenarioRecordController.selected.name}』の編集に戻る" immediate="true"/>
                 <h:outputLabel> / </h:outputLabel>
-                <h:commandLink action="/encounterRecord/View" value="戦闘及びモンスターの追加"/>                
+                <h:commandLink action="/encounterRecord/Battle" value="戦闘及びモンスターの追加"/>                
                 <br />
             </h:form>            
         </ui:define>
