--- a/web/encounterRecord/Edit.xhtml
+++ b/web/encounterRecord/Edit.xhtml
@@ -4,6 +4,9 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
+    
+    
+    <!-- このページはもはや使われていない -->
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
