--- a/web/scenarioRecord/Edit.xhtml
+++ b/web/scenarioRecord/Edit.xhtml
@@ -44,7 +44,7 @@
                                 <f:facet name="header">
                                     <h:outputText value="エンカウンター名"/>
                                 </f:facet>
-                                <h:outputText value="#{item.name}"/>
+                                    <h:commandLink action="#{encounterRecordController.prepareView}" value="#{item.name}"/>                                
                             </h:column>                               
                             <h:column>
                                 <f:facet name="header">
@@ -62,11 +62,7 @@
                                 <f:facet name="header">
                                     <h:outputText value="&nbsp;"/>
                                 </f:facet>
-                                <h:commandLink action="#{encounterRecordController.prepareView}" value="戦闘"/>
-                                <h:outputText value="  "/>
-                                <h:commandLink action="#{encounterRecordController.prepareEdit}" value="編集"/> 
-                                <h:outputText value="  "/>
-                                <h:commandLink action="#{encounterRecordController.destroy}" value="削除"/>
+                                <h:commandButton action="#{encounterRecordController.destroy}" onclick="return confirm('削除しますか?')" value="削除"/>
                             </h:column>
                         </h:dataTable>
                     </h:panelGrid>                        
